@@ -842,12 +842,16 @@ void MainWindow::on_fullscreen()
 
 void MainWindow::show_error(const Glib::ustring& message)
 {
+	set_status_text(message);
+
+	/*
 	g_debug("Message Dialog: '%s'", message.c_str());
 	
 	Gtk::MessageDialog dialog(*this, message, false, Gtk::MESSAGE_ERROR, Gtk::BUTTONS_OK, true);
 	dialog.set_position(Gtk::WIN_POS_CENTER_ON_PARENT);
 	dialog.set_title(PACKAGE_NAME " - Error");
 	dialog.run();
+	*/
 }
 
 void MainWindow::on_exception()
