@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
@@ -13,7 +13,6 @@
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog_vbox">
         <property name="visible">True</property>
@@ -168,7 +167,7 @@
     <property name="transient_for">window_main</property>
     <property name="program_name">Me TV</property>
     <property name="version">0.0.1</property>
-    <property name="copyright" translatable="yes">Copyright &#xA9; Michael Lamothe</property>
+    <property name="copyright" translatable="yes">Copyright © Michael Lamothe</property>
     <property name="comments" translatable="yes">Me TV is a Digital Television (DVB) viewer for GNOME</property>
     <property name="website">https://launchpad.net/me-tv</property>
     <property name="website_label" translatable="yes">Me TV project website</property>
@@ -223,7 +222,6 @@ found in /usr/share/common-licenses/GPL file.</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">window_main</property>
     <property name="opacity">0.98999999999999999</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
@@ -325,7 +323,7 @@ found in /usr/share/common-licenses/GPL file.</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="max_length">2</property>
-                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="invisible_char">●</property>
                     <property name="width_chars">2</property>
                     <property name="adjustment">adjustment_hour</property>
                   </object>
@@ -349,7 +347,7 @@ found in /usr/share/common-licenses/GPL file.</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="max_length">2</property>
-                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="invisible_char">●</property>
                     <property name="width_chars">2</property>
                     <property name="adjustment">adjustment_minute</property>
                   </object>
@@ -604,7 +602,6 @@ found in /usr/share/common-licenses/GPL file.</property>
     <property name="icon">me-tv.xpm</property>
     <property name="type_hint">dialog</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox5">
         <property name="visible">True</property>
@@ -740,7 +737,6 @@ found in /usr/share/common-licenses/GPL file.</property>
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox4">
         <property name="visible">True</property>
@@ -817,7 +813,7 @@ found in /usr/share/common-licenses/GPL file.</property>
                   <object class="GtkEntry" id="entry_preferred_language">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="invisible_char">●</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -1330,7 +1326,6 @@ found in /usr/share/common-licenses/GPL file.</property>
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox10">
         <property name="visible">True</property>
@@ -1847,7 +1842,6 @@ found in /usr/share/common-licenses/GPL file.</property>
     <property name="window_position">center-on-parent</property>
     <property name="icon">me-tv.xpm</property>
     <property name="type_hint">dialog</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox12">
         <property name="visible">True</property>
@@ -2255,7 +2249,7 @@ If you've just upgraded Me TV then this is probably what you want to do.
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="editable">False</property>
-                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="invisible_char">●</property>
                     <property name="adjustment">adjustment_epg_page</property>
                     <property name="numeric">True</property>
                   </object>
@@ -2327,7 +2321,6 @@ If you've just upgraded Me TV then this is probably what you want to do.
     <property name="icon">me-tv.xpm</property>
     <property name="type_hint">dialog</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox13">
         <property name="visible">True</property>
@@ -2504,7 +2497,6 @@ If you've just upgraded Me TV then this is probably what you want to do.
     <property name="icon">me-tv.xpm</property>
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox11">
         <property name="visible">True</property>
@@ -2529,7 +2521,7 @@ If you've just upgraded Me TV then this is probably what you want to do.
               <object class="GtkEntry" id="entry_edit_channel_name">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="invisible_char">&#x25CF;</property>
+                <property name="invisible_char">●</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -2555,7 +2547,7 @@ If you've just upgraded Me TV then this is probably what you want to do.
               <object class="GtkEntry" id="entry_edit_channel_frequency">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="invisible_char">&#x25CF;</property>
+                <property name="invisible_char">●</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -2636,7 +2628,6 @@ If you've just upgraded Me TV then this is probably what you want to do.
     <property name="icon">me-tv.xpm</property>
     <property name="type_hint">normal</property>
     <property name="transient_for">dialog_channels</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox14">
         <property name="visible">True</property>
@@ -2804,7 +2795,6 @@ If you've just upgraded Me TV then this is probably what you want to do.
     <property name="icon">me-tv.xpm</property>
     <property name="type_hint">dialog</property>
     <property name="transient_for">window_main</property>
-    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox15">
         <property name="visible">True</property>
@@ -2816,7 +2806,7 @@ If you've just upgraded Me TV then this is probably what you want to do.
               <object class="GtkLabel" id="label_auto_record">
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">EPG event titles that contain the following entries will be automatically recorded.</property>
+                <property name="label" translatable="yes">EPG event titles that contain the following entries will be automatically recorded.  The order is important, programs that are higher in the list get priority over the lower ones.</property>
                 <property name="wrap">True</property>
               </object>
               <packing>
@@ -2838,6 +2828,7 @@ If you've just upgraded Me TV then this is probably what you want to do.
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="headers_visible">False</property>
+                        <property name="reorderable">True</property>
                         <property name="enable_search">False</property>
                         <property name="search_column">0</property>
                       </object>
